<resources>
    <string name="ajustes">Ajustes</string>
    <string name="al_carrito">Añadir al Carrito</string>
    <string name="apellidos">Apellido(s)</string>
    <string name="app_name">PowerTechs</string>
    <string name="anadir">Añadir</string>
    <string name="aumentar">Aumentar</string>
    <string name="cantidad">Cantidad</string>
    <string name="carrito">Carrito de Compras</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="comentario">Comentario</string>
    <string name="comentarios">Comentarios</string>
    <string name="comprar">Comprar</string>
    <string name="contactenos">Contactenos</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirme_contrasena">Confirme Contraseña</string>
    <string name="correo">Correo Electrónico</string>
    <string name="direccion">Dirección de Residencia</string>
    <string name="disminuir">Disminuir</string>
    <string name="documento">Documento</string>
    <string name="editar">Editar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="enviar">Enviar</string>
    <string name="guardar">Guardar</string>
    <string name="imagen_producto">Imágen del Producto</string>
    <string name="ingresar">Ingresar</string>
    <string name="iva">IVA</string>
    <string name="logo">Logo PowerTechs</string>
    <string name="menu">Menú</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="nombres">Nombre(s)</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="nos_encontramos">Nos encontramos en el Barrio Chicó en la Carrera 11a # 94&#8211;15.</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="numero_celular">Número de Celular</string>
    <string name="pagar">Pagar</string>
    <string name="pedido">Pedido</string>
    <string name="pedidos">Pedidos</string>
    <string name="power">Power</string>
    <string name="perfil">Perfil</string>
    <string name="precio">Precio</string>
    <string name="producto">Producto</string>
    <string name="productos">Productos</string>
    <string name="recuperar_contrasena">Recuperar Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="restaurar">Restaurar</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="subtotal">Subtotal</string>
    <string name="techs">Techs</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="total">Total</string>
    <string name="valor">Valor</string>
    <string name="ver_detalle">Ver Detalle</string>
    <string name="visitanos">Visítanos para tener el gusto de atenderte.</string>
    <!-- Array para tipo de documento -->
    <string-array name="tipo_documento">
        <item>Seleccione</item>
        <item>Registro Civil de Nacimiento</item>
        <item>Tarjeta de Identidad</item>
        <item>Cédula de Ciudadanía</item>
        <item>Tarjeta de Extranjería</item>
        <item>Cédula de Extranjería</item>
        <item>Pasaporte</item>
        <item>Número de Identificación Tributaria</item>
    </string-array>
</resources>