<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.fragments.ProfileFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/perfil"
        android:textColor="@color/blue"
        android:textSize="32sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/fotoperfil"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/red"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangulo_borde_rojo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombres"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_documento"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spn_tipodoc_2"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/documento"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_registro_documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_registro_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:textSize="28sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_celular"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_registro_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:textSize="28sp"
                tools:ignore="LabelFor" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/enviar"
        android:textSize="24sp" />

</LinearLayout>